--- a/index.html
+++ b/index.html
@@ -7,13 +7,37 @@
 </head>
 <body>
 <nav class="navbar"></nav>
+<div class="page-name">
+    <h1>МОИ ПЕРСОНАЖИ</h1>
+</div>
+<div class="page-line">
+    <svg width="1660" height="5" viewBox="0 0 1660 5" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <line y1="2.5" x2="1660" y2="2.5" stroke="url(#paint0_radial)" stroke-width="5"/>
+        <defs>
+            <radialGradient id="paint0_radial" cx="0" cy="0" r="1" gradientUnits="userSpaceOnUse" gradientTransform="translate(830 5.48368) rotate(-179.967) scale(858 1.42428e+06)">
+                <stop stop-color="#6F00B2"/>
+                <stop offset="1" stop-opacity="0"/>
+            </radialGradient>
+        </defs>
+    </svg>
+</div>
 <div class="container">
     <div class="menu">
         <div class="account-login">
-            <div class="photo"><svg width="40" height="40" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <circle cx="30" cy="30" r="29.5" fill="#C4C4C4" stroke="#6F00B2"/>
-            </svg></div>
+            <div class="photo">
+                <svg width="40" height="40" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <circle cx="30" cy="30" r="29.5" fill="#C4C4C4" stroke="#6F00B2"/></svg>
+            </div>
             <div class="name"><span>admin</span></div>
+        </div>
+        <div class="menu-li">
+            <li>Мои персонажи</li>
+            <li>Изменить пароль</li>
+            <li>Купить монеты</li>
+            <li>Промокод</li>
+            <li>Достижения</li>
+            <li>Пригласить друга</li>
+            <li>Выход</li>
         </div>
     </div>
     <div class="content"></div>
