--- a/index.html
+++ b/index.html
@@ -40,7 +40,25 @@
             <li>Выход</li>
         </div>
     </div>
-    <div class="content"></div>
+    <div class="content">
+        <table>
+            <caption></caption>
+            <tr>
+                <th>Уровень</th>
+                <th>Имя</th>
+                <th>Профессия</th>
+                <th>Примечание</th>
+                <th></th>
+            </tr>
+            <tr>
+                <th>85</th>
+                <th>admin</th>
+                <th>Prophet</th>
+                <th></th>
+                <th><button>Восстановить</button></th>
+            </tr>
+        </table>
+    </div>
 </div>
 
 </body>
