--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <th>admin</th>
                 <th>Prophet</th>
                 <th></th>
-                <th><button>Восстановить</button></th>
+                <th><button class="button">Восстановить</button></th>
             </tr>
         </table>
     </div>
